--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,34 @@
-body{
+body {
     background-color: #2b2b2b;
 }
 
-*{
+* {
     font-family: 'Raleway', sans-serif;
     color: #fff;
+}
+
+.login {
+    background-color: #2980b9;
+    width: 35%;
+    position: absolute;
+    top: 15%;
+    left: 5%;
+}
+
+.image-circle {
+    border-radius: 50%;
+    width: 200px;
+    height: 200px;
+    border: 4px solid #fff;
+    margin: 10px;
+}
+
+.ip {
+    background-color: #59a9c2;
+    height: 80px;
+}
+
+.ip:hover {
+    background-color: #2980b9;
+    height: 80px;
 }
