--- a/css/style.css
+++ b/css/style.css
@@ -32,3 +32,48 @@ body {
     background-color: #2980b9;
     height: 80px;
 }
+
+.login-control {
+    background-color: #fff;
+    padding: 15px;
+}
+
+.control {
+    color: #000;
+}
+
+.label {
+    color: #ed4f26;
+    font-size: 18px;
+    display: block;
+    text-align: left;
+}
+
+.form-control {
+    font-size: 25px;
+    padding: 25px;
+    border-bottom: 1px solid #ccc;
+}
+
+.btn-custom {
+    background-color: #2c82c9;
+    border-radius: 20px;
+    margin: 10px;
+    padding: 5px;
+    width: 150px;
+    font-size: 20px;
+}
+
+@media(max-width:768px) {
+    .login {
+        background-color: #16a085;
+        width: 90%;
+        top: 10%;
+    }
+}
+
+@media(min-width:768px) and (max-width:1360px) {
+    .ip h3 {
+        font-size: 15px;
+    }
+}
